--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "strict": true,
     "lib": ["es2017", "esnext.asynciterable", "dom"]
   },
   "files": [
