--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,5 +7,6 @@ steps:
 
   - label: Deploy
     commands:
-      - nix-shell --run 'deploy'
+      - nix run -f. inputs.deploy-rs.defaultPackage.x86_64-linux
+          -c deploy
     branches: "release"
