--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - label: Check Nix flake
     commands:
-      - nix-shell --run 'nix flake check -L'
+      - nix flake check -L
 
   - wait
 
